2018-09-26 Alexander Malysh <amalysh @ kannnel.org>
    * gwlib/date.[ch]: added handling of timezone

2018-09-25  Stipe Tolj  <stolj at kannel.org>
   * gwlib/http.c: fixing PANIC condition within conn_unregister() in case the
     connection was destroyed already.
     [Msg-Id: <5B964593.1070105@kannel.org>]
     
2018-09-07 Alexander Malysh <amalysh @ kannnel.org>
   * gw/smsc/smsc_http.c, gw/smsc/smsc_http_p.h, gw/smsc/http/*.c: moved kannel
     callbacks to gw/smsc/http/kannel.c. Added gw/smsc/http/*.c to Makefile.am
     and use new gw_dlopen_get_symbol to get callback symbols.

2018-09-07 Alexander Malysh <amalysh @ kannnel.org>
   * gwlib/gw-dlopen.[ch]: added simple dlopen lookup functionality.

2018-09-07  Stipe Tolj  <stolj at kannel.org>
   * configure.in: removing own binary suffix handling, automake provides an own
     construct for this.
     [https://www.gnu.org/software/automake/manual/automake.html#Renaming]
     
2018-09-04  Stipe Tolj  <stolj at kannel.org>
   * test/test_http.c: fix compiler warnings. NLC.
   
2018-09-04  Stipe Tolj  <stolj at kannel.org>
   * test/fakewap.c: cast panic() output to fix compiler warning on 64bit.
  
2018-09-04  Stipe Tolj  <stolj at kannel.org>
   * doc/doxygen/kannel.conf: re-tag the config with the current svn snapshot 
     revision number.
     
2018-08-30  Stipe Tolj  <stolj at kannel.org>
   * test/test_dbpool.c: fix compiler warning/error in case we compile without
     any DB support. NLC.
     
2015-12-14  Stipe Tolj  <stolj at kannel.org>
    * doc/examples/store-redis.conf: add documentation for the 'hash' config
      directive in the 'group = store-db' context.
    * gw/bb_store_redis.c: use redis with binds list and implement an 'hash'
      mode that allows for readable object in the redis store, rather then the
      string blobs as sinle key/value pair.
    * gw/dlr_redis.c: use the binds list values.
    * gwlib/cfg.def: add 'hash' config directive to 'group = store-db' context.