@@ -1,4 +1,7 @@
 2018-09-26 Alexander Malysh <amalysh @ kannnel.org>
+    * gwlib/date.[ch]: added handling of fraction
+
+2018-09-26 Alexander Malysh <amalysh @ kannnel.org>
     * gwlib/date.[ch]: added handling of timezone
 
 2018-09-25  Stipe Tolj  <stolj at kannel.org>
